Bug 441369 - Trimming or Cropping image breaks Clone Frames
Summary: Trimming or Cropping image breaks Clone Frames
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Animation (other bugs)
Version First Reported In: 5.0.0-beta1
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Emmet O'Neill
URL:
Keywords: release_blocker
Depends on:
Blocks:
 
Reported: 2021-08-22 14:36 UTC by Kao
Modified: 2021-09-20 21:47 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kao 2021-08-22 14:36:47 UTC
SUMMARY
If you have created an animation and you use Clone frames, then you try to crop or trim the canvas, all the clones will either be cleared or they will be shifted to an arbitrary location outside the cropped window. The normal frames are not negatively affected by cropping at all.


STEPS TO REPRODUCE
1. Create an animation with clone frames and some normal frames for comparison
2. Crop the canvas using the crop tool or Trim tool

OBSERVED RESULT
All of the cloned frames have either been cleared or had the image moved to an arbitrary location.

EXPECTED RESULT
All the frames are cropped and still line up regardless of the new crop dimensions

SOFTWARE/OS VERSIONS
Windows: 10
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Ahab Greybeard 2021-08-22 16:54:03 UTC
I can confirm this for clone frames in the 5.0.0-beta1 appimage on Debian 10.

I used a four frame animation sequence that was cloned.

Depending on content and trim/crop size-location, the result can vary from no clearing of clones, clearing of some but not all clones, and clearing of all clones.

This 'damage' can be restored by using Undo.
Comment 2 Eoin O'Neill 2021-09-16 21:59:22 UTC
Git commit 62aa70833819d3756855dd99f4015548e2e3b7dc by Eoin O'Neill.
Committed on 16/09/2021 at 21:56.
Pushed by eoinoneill into branch 'master'.

Animation Clones: Fix crop not working properly on cloned frames.

Clone frames were not acommodated for in crop operations,
causing "double" cropping to occur on reused frames.

M  +12   -6    libs/image/kis_layer_utils.cpp
M  +1    -1    libs/image/kis_layer_utils.h
M  +1    -1    libs/ui/kis_filter_manager.cc

https://invent.kde.org/graphics/krita/commit/62aa70833819d3756855dd99f4015548e2e3b7dc
Comment 3 Eoin O'Neill 2021-09-20 21:47:09 UTC
Git commit ce59592926c6bde7445421938993038216641907 by Eoin O'Neill.
Committed on 20/09/2021 at 21:19.
Pushed by eoinoneill into branch 'krita/5.0'.

Animation Clones: Fix crop not working properly on cloned frames.

Clone frames were not acommodated for in crop operations,
causing "double" cropping to occur on reused frames.
(cherry picked from commit 62aa70833819d3756855dd99f4015548e2e3b7dc)

M  +12   -6    libs/image/kis_layer_utils.cpp
M  +1    -1    libs/image/kis_layer_utils.h
M  +1    -1    libs/ui/kis_filter_manager.cc

https://invent.kde.org/graphics/krita/commit/ce59592926c6bde7445421938993038216641907