Animation Clones: Fix crop not working properly on cloned frames.

Clone frames were not acommodated for in crop operations,
causing "double" cropping to occur on reused frames.

BUG:441369